build_utf8.log

> Task :compileJava FAILED
./gradlew : D:\project\
hanspoon_backend\src\ma
in\java\com\project\han
spoon\common\faq\contro
ller\AdminFaqController
.java:79: error: incomp
atible types: inference
 variable T has incompa
tible bounds
위치 줄:1 문자:1
+ ./gradlew compileJava
 > build.log 2>&1 ; pyt
hon -c "import sys; lin
es ...
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (D:\project\ha   
 ns...mpatible boun    
ds:String) [], Rem    o
teException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
            return Resp
onseEntity.ok(ApiRespon
se.ok("FAQ媛 ??젣?섏뿀?듬땲?
?"));
                       
             ^
    equality constraint
s: Void
    lower bounds: Strin
g
  where T is a type-var
iable:
    T extends Object de
clared in method <T>ok(
T)
D:\project\hanspoon_bac
kend\src\main\java\com\
project\hanspoon\common
\notice\controller\Admi
nNoticeController.java:
82: error: incompatible
 types: inference varia
ble T has incompatible 
bounds
            return Resp
onseEntity.ok(ApiRespon
se.ok("怨듭??ы빆????젣?섏뿀?듬
땲??"));
                       
             ^
    equality constraint
s: Void
    lower bounds: Strin
g
  where T is a type-var
iable:
    T extends Object de
clared in method <T>ok(
T)
D:\project\hanspoon_bac
kend\src\main\java\com\
project\hanspoon\common
\payment\controller\Adm
inPaymentController.jav
a:48: error: incompatib
le types: inference var
iable T has incompatibl
e bounds
            return Resp
onseEntity.ok(ApiRespon
se.ok("寃곗젣媛 痍⑥냼?섏뿀?듬땲?
?"));
                       
             ^
    equality constraint
s: Void
    lower bounds: Strin
g
  where T is a type-var
iable:
    T extends Object de
clared in method <T>ok(
T)
D:\project\hanspoon_bac
kend\src\main\java\com\
project\hanspoon\common
\payment\controller\Pay
mentController.java:173
: error: incompatible t
ypes: inference variabl
e T has incompatible bo
unds
            return Resp
onseEntity.ok(ApiRespon
se.ok("寃곗젣媛 痍⑥냼?섏뿀?듬땲?
?"));
                       
             ^
    equality constraint
s: Void
    lower bounds: Strin
g
  where T is a type-var
iable:
    T extends Object de
clared in method <T>ok(
T)
D:\project\hanspoon_bac
kend\src\main\java\com\
project\hanspoon\common
\user\controller\AdminU
serController.java:58: 
error: incompatible typ
es: inference variable 
T has incompatible boun
ds
        return Response
Entity.ok(ApiResponse.o
k("?ъ슜???곹깭媛 蹂寃쎈릺?덉뒿?
덈떎."));
                       
         ^
    equality constraint
s: Void
    lower bounds: Strin
g
  where T is a type-var
iable:
    T extends Object de
clared in method <T>ok(
T)
D:\project\hanspoon_bac
kend\src\main\java\com\
project\hanspoon\common
\user\controller\AuthCo
ntroller.java:89: error
: incompatible types: i
nference variable T has
 incompatible bounds
            return Resp
onseEntity.ok(ApiRespon
se.ok("?뚯썝媛?낆뿉 ?깃났?덉뒿?
덈떎."));
                       
             ^
    equality constraint
s: Void
    lower bounds: Strin
g
  where T is a type-var
iable:
    T extends Object de
clared in method <T>ok(
T)
D:\project\hanspoon_bac
kend\src\main\java\com\
project\hanspoon\recipe
\controller\RecipeContr
oller.java:62: error: i
ncompatible types: infe
rence variable T has in
compatible bounds
            return Resp
onseEntity.ok(ApiRespon
se.ok("?덉떆?쇨? ?깅줉?섏뿀?듬땲
??"));
                       
             ^
    equality constraint
s: Void
    lower bounds: Strin
g
  where T is a type-var
iable:
    T extends Object de
clared in method <T>ok(
T)
D:\project\hanspoon_bac
kend\src\main\java\com\
project\hanspoon\recipe
\controller\RecipeContr
oller.java:129: error: 
incompatible types: inf
erence variable T has i
ncompatible bounds
            return Resp
onseEntity.ok(ApiRespon
se.ok("?덉떆?쇨? ??젣?섏뿀?듬땲
??"));
                       
             ^
    equality constraint
s: Void
    lower bounds: Strin
g
  where T is a type-var
iable:
    T extends Object de
clared in method <T>ok(
T)
D:\project\hanspoon_bac
kend\src\main\java\com\
project\hanspoon\recipe
\controller\RecipeContr
oller.java:154: error: 
incompatible types: inf
erence variable T has i
ncompatible bounds
            return Resp
onseEntity.ok(ApiRespon
se.ok("?덉떆?쇨? 蹂듭썝?섏뿀?듬땲
??"));
                       
             ^
    equality constraint
s: Void
    lower bounds: Strin
g
  where T is a type-var
iable:
    T extends Object de
clared in method <T>ok(
T)
D:\project\hanspoon_bac
kend\src\main\java\com\
project\hanspoon\recipe
\controller\RecipeContr
oller.java:180: error: 
incompatible types: inf
erence variable T has i
ncompatible bounds
            return Resp
onseEntity.ok(ApiRespon
se.ok("愿?щぉ濡앹뿉 ?깅줉?섏뿀?
듬땲??"));
                       
             ^
    equality constraint
s: Void
    lower bounds: Strin
g
  where T is a type-var
iable:
    T extends Object de
clared in method <T>ok(
T)
10 errors

[Incubating] Problems report is available at: file:///D:/project/hanspoon_backend/build/reports/problems/problems-report.html

FAILURE: Build failed w
ith an exception.

* What went wrong:
Execution failed for ta
sk ':compileJava'.
> Compilation failed; s
ee the compiler output 
below.
  D:\project\hanspoon_b
ackend\src\main\java\co
m\project\hanspoon\comm
on\faq\controller\Admin
FaqController.java:79: 
error: incompatible typ
es: inference variable 
T has incompatible boun
ds
              return Re
sponseEntity.ok(ApiResp
onse.ok("FAQ媛 ??젣?섏뿀?듬
땲??"));
                       
               ^
      equality constrai
nts: Void
      lower bounds: Str
ing
    where T is a type-v
ariable:
      T extends Object 
declared in method <T>o
k(T)
  D:\project\hanspoon_b
ackend\src\main\java\co
m\project\hanspoon\comm
on\notice\controller\Ad
minNoticeController.jav
a:82: error: incompatib
le types: inference var
iable T has incompatibl
e bounds
              return Re
sponseEntity.ok(ApiResp
onse.ok("怨듭??ы빆????젣?섏뿀
?듬땲??"));
                       
               ^
      equality constrai
nts: Void
      lower bounds: Str
ing
    where T is a type-v
ariable:
      T extends Object 
declared in method <T>o
k(T)
  D:\project\hanspoon_b
ackend\src\main\java\co
m\project\hanspoon\comm
on\payment\controller\A
dminPaymentController.j
ava:48: error: incompat
ible types: inference v
ariable T has incompati
ble bounds
              return Re
sponseEntity.ok(ApiResp
onse.ok("寃곗젣媛 痍⑥냼?섏뿀?듬
땲??"));
                       
               ^
      equality constrai
nts: Void
      lower bounds: Str
ing
    where T is a type-v
ariable:
      T extends Object 
declared in method <T>o
k(T)
  D:\project\hanspoon_b
ackend\src\main\java\co
m\project\hanspoon\comm
on\payment\controller\P
aymentController.java:1
73: error: incompatible
 types: inference varia
ble T has incompatible 
bounds
              return Re
sponseEntity.ok(ApiResp
onse.ok("寃곗젣媛 痍⑥냼?섏뿀?듬
땲??"));
                       
               ^
      equality constrai
nts: Void
      lower bounds: Str
ing
    where T is a type-v
ariable:
      T extends Object 
declared in method <T>o
k(T)
  D:\project\hanspoon_b
ackend\src\main\java\co
m\project\hanspoon\comm
on\user\controller\Admi
nUserController.java:58
: error: incompatible t
ypes: inference variabl
e T has incompatible bo
unds
          return Respon
seEntity.ok(ApiResponse
.ok("?ъ슜???곹깭媛 蹂寃쎈릺?덉
뒿?덈떎."));
                       
           ^
      equality constrai
nts: Void
      lower bounds: Str
ing
    where T is a type-v
ariable:
      T extends Object 
declared in method <T>o
k(T)
  D:\project\hanspoon_b
ackend\src\main\java\co
m\project\hanspoon\comm
on\user\controller\Auth
Controller.java:89: err
or: incompatible types:
 inference variable T h
as incompatible bounds
              return Re
sponseEntity.ok(ApiResp
onse.ok("?뚯썝媛?낆뿉 ?깃났?덉
뒿?덈떎."));
                       
               ^
      equality constrai
nts: Void
      lower bounds: Str
ing
    where T is a type-v
ariable:
      T extends Object 
declared in method <T>o
k(T)
  D:\project\hanspoon_b
ackend\src\main\java\co
m\project\hanspoon\reci
pe\controller\RecipeCon
troller.java:62: error:
 incompatible types: in
ference variable T has 
incompatible bounds
              return Re
sponseEntity.ok(ApiResp
onse.ok("?덉떆?쇨? ?깅줉?섏뿀?
듬땲??"));
                       
               ^
      equality constrai
nts: Void
      lower bounds: Str
ing
    where T is a type-v
ariable:
      T extends Object 
declared in method <T>o
k(T)
  D:\project\hanspoon_b
ackend\src\main\java\co
m\project\hanspoon\reci
pe\controller\RecipeCon
troller.java:129: error
: incompatible types: i
nference variable T has
 incompatible bounds
              return Re
sponseEntity.ok(ApiResp
onse.ok("?덉떆?쇨? ??젣?섏뿀?
듬땲??"));
                       
               ^
      equality constrai
nts: Void
      lower bounds: Str
ing
    where T is a type-v
ariable:
      T extends Object 
declared in method <T>o
k(T)
  D:\project\hanspoon_b
ackend\src\main\java\co
m\project\hanspoon\reci
pe\controller\RecipeCon
troller.java:154: error
: incompatible types: i
nference variable T has
 incompatible bounds
              return Re
sponseEntity.ok(ApiResp
onse.ok("?덉떆?쇨? 蹂듭썝?섏뿀?
듬땲??"));
                       
               ^
      equality constrai
nts: Void
      lower bounds: Str
ing
    where T is a type-v
ariable:
      T extends Object 
declared in method <T>o
k(T)
  D:\project\hanspoon_b
ackend\src\main\java\co
m\project\hanspoon\reci
pe\controller\RecipeCon
troller.java:180: error
: incompatible types: i
nference variable T has
 incompatible bounds
              return Re
sponseEntity.ok(ApiResp
onse.ok("愿?щぉ濡앹뿉 ?깅줉?섏
뿀?듬땲??"));
                       
               ^
      equality constrai
nts: Void
      lower bounds: Str
ing
    where T is a type-v
ariable:
      T extends Object 
declared in method <T>o
k(T)
  10 errors

* Try:
> Check your code and d
ependencies to fix the 
compilation error(s)
> Run with --scan to ge
t full insights.

BUILD FAILED in 2s
1 actionable task: 1 executed
